--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -4,15 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
+    tools:context=".AddContactActivity">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbarGuardar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
         android:id="@+id/scrollView4"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnRegistrar"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbarGuardar">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,28 +34,18 @@
                 android:layout_height="match_parent">
 
 
-                <ImageView
-                    android:id="@+id/imgLogoLogin3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="84dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/blue_logo" />
-
                 <TextView
                     android:id="@+id/etqRegistrar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="32dp"
                     android:fontFamily="@font/poppins_medium"
-                    android:text="@string/registrarusuario"
+                    android:text="Nuevo Contacto"
                     android:textColor="#000000"
-                    android:textSize="37dp"
+                    android:textSize="20dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imgLogoLogin3" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <EditText
                     android:id="@+id/txtAliasNC"
@@ -56,7 +56,7 @@
                     android:layout_marginEnd="32dp"
                     android:background="@drawable/edittext_simple"
                     android:ems="10"
-                    android:hint="@string/iNombre"
+                    android:hint="@string/iAlias"
                     android:inputType="textPersonName"
                     android:paddingLeft="19dp"
                     android:paddingTop="20dp"
@@ -73,7 +73,7 @@
                     android:layout_marginStart="18dp"
                     android:layout_marginTop="12dp"
                     android:fontFamily="@font/poppins_semibold"
-                    android:text="@string/nombre"
+                    android:text="@string/alias"
                     android:textColor="#000000"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="@+id/txtAliasNC"
@@ -88,7 +88,7 @@
                     android:layout_marginEnd="32dp"
                     android:background="@drawable/edittext_simple"
                     android:ems="10"
-                    android:hint="@string/iCorreo"
+                    android:hint="@string/iNombre"
                     android:inputType="textEmailAddress"
                     android:paddingLeft="19dp"
                     android:paddingTop="20dp"
@@ -105,7 +105,7 @@
                     android:layout_marginStart="18dp"
                     android:layout_marginTop="12dp"
                     android:fontFamily="@font/poppins_semibold"
-                    android:text="@string/correo"
+                    android:text="nombre"
                     android:textColor="#000000"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="@+id/txtNombreNC"
@@ -120,7 +120,7 @@
                     android:layout_marginEnd="32dp"
                     android:background="@drawable/edittext_simple"
                     android:ems="10"
-                    android:hint="@string/iContra"
+                    android:hint="@string/iNoCuenta"
                     android:inputType="textPassword"
                     android:paddingLeft="19dp"
                     android:paddingTop="20dp"
@@ -137,63 +137,50 @@
                     android:layout_marginStart="18dp"
                     android:layout_marginTop="12dp"
                     android:fontFamily="@font/poppins_semibold"
-                    android:text="@string/contra"
+                    android:text="@string/cuenta"
                     android:textColor="#000000"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="@+id/txtNoCuentaNC"
                     app:layout_constraintTop_toTopOf="@+id/txtNoCuentaNC" />
 
-                <EditText
-                    android:id="@+id/txtRepetirContraR"
+                <Spinner
+                    android:id="@+id/spTipoCunetaNC"
                     android:layout_width="match_parent"
                     android:layout_height="82dp"
                     android:layout_marginStart="32dp"
-                    android:layout_marginTop="18dp"
+                    android:layout_marginTop="24dp"
                     android:layout_marginEnd="32dp"
+                    android:layout_marginBottom="32dp"
                     android:background="@drawable/edittext_simple"
                     android:ems="10"
-                    android:hint="@string/iRContra"
-                    android:inputType="textPassword"
+                    android:hint="@string/iAlias"
+                    android:inputType="textPersonName"
                     android:paddingLeft="19dp"
                     android:paddingTop="20dp"
                     android:paddingRight="19dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txtNoCuentaNC" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtNoCuentaNC"
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <TextView
-                    android:id="@+id/etqContra2"
+                    android:id="@+id/etqNoCuenta2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="18dp"
                     android:layout_marginTop="12dp"
                     android:fontFamily="@font/poppins_semibold"
-                    android:text="@string/contra"
+                    android:text="@string/cuenta"
                     android:textColor="#000000"
                     android:textSize="16sp"
-                    app:layout_constraintStart_toStartOf="@+id/txtRepetirContraR"
-                    app:layout_constraintTop_toTopOf="@+id/txtRepetirContraR" />
+                    app:layout_constraintStart_toStartOf="@+id/spTipoCunetaNC"
+                    app:layout_constraintTop_toTopOf="@+id/spTipoCunetaNC" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
     </ScrollView>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnRegistrar"
-        android:layout_width="match_parent"
-        android:layout_height="74dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/blue_button"
-        android:fontFamily="@font/poppins_medium"
-        android:stateListAnimator="@null"
-        android:text="@string/registrarusuario"
-        android:textColor="@color/white"
-        android:textSize="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
