--- a/app/src/main/res/layout/lista_contactos.xml
+++ b/app/src/main/res/layout/lista_contactos.xml
@@ -85,6 +85,17 @@
 
             </LinearLayout>
 
+            <ImageButton
+                android:id="@+id/imageButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:layout_marginEnd="0dp"
+                android:backgroundTint="@color/white"
+                app:srcCompat="@drawable/ic_icons8_menu_vertical_1" />
+
         </RelativeLayout>
     </LinearLayout>
 
